Updated Gradle wrapper, JDA, LavaPlayer, SLF4J, updated code for JDA V4, changed to LavaPlayer's YouTube search